<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST145_PnpHorPos_e" Id="{013d5999-a955-458e-91da-f395f5a7f6ae}">
    <Declaration><![CDATA[TYPE ST145_PnpHorPos_e : ST110_PnpHorPos_e;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>