<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST145_PnpVerPos_e" Id="{f0901d84-43fe-4ef0-8da8-e395240f890a}">
    <Declaration><![CDATA[TYPE ST145_PnpVerPos_e : ST110_PnpVerPos_e;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>